--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@metamask/onboarding": "^1.0.1",
     "core-js": "^3.6.5",
+    "ethers": "^5.5.2",
     "vue": "^2.6.11",
     "vue-step-wizard": "^0.1.17"
   },
@@ -20,6 +22,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "6.0.0",
+    "regenerator-runtime": "^0.13.9",
     "sass-loader": "10.2.0",
     "vue-template-compiler": "^2.6.11"
   },
